epm_kubernets/task2/result/web_canary_deployment_v2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
    version: v2
  name: canary-deployment-web-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
      version: v2
  template:
    metadata:
      labels:
        app: web
        version: v2
    spec:
      containers:
        - image: nginx:latest
          name: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-default-conf
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-default-conf
          configMap:
            name: nginx-default-conf-cm-v2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
    version: v2
  name: canary-service-web-v2
spec:
  type: ClusterIP
  selector:
    app: web
    version: v2
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
